build: testcontainer 방식 수정